# kickstarter-ai-scraper

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: scrape_config.yaml
data/exports/: kickstarter_ai_projects.csv  kickstarter_ai_projects.parquet
data/raw/: Webscrawling2026.1.20.docx
src/kickstarter_scraper/: __init__.py  cli.py  detail_scraper.py  scraper.py
src/kickstarter_scraper/api/: __init__.py  client.py  parser.py
src/kickstarter_scraper/models/: __init__.py  project.py
src/kickstarter_scraper/storage/: __init__.py  export.py  json_store.py
src/kickstarter_scraper/utils/: __init__.py  config.py  logging.py  relevance.py
tests/: test_parser.py  test_storage.py
